dtol_svc+deployment_elasticsearch.yml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  namespace: elasticsearch
  labels:
    service: elasticsearch
spec:
  ports:
    - name: client
      port: 9200
      protocol: TCP
      targetPort: 9200
    - name: nodes
      port: 9300
      protocol: TCP
      targetPort: 9300
  type: NodePort

  selector:
    run: elasticsearch

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: elasticsearch
  namespace: elasticsearch
spec:
  selector:
    matchLabels:
      run: elasticsearch
  replicas: 1
  template:
    metadata:
      labels:
        run: elasticsearch
    spec:
      containers:
        - image: docker.elastic.co/elasticsearch/elasticsearch:7.6.2
          name: elasticsearch
          volumeMounts:
          # Volume 'data' is mounted to path '/data'
          - name: data 
            mountPath: "/data"
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 9300
            name: nodes
          - containerPort: 9200
            name: client
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: es-pvc
